# simple_raytracer

./: .gitignore  CMakeLists.txt  Makefile
src/: blob.cc  blob.hh  camera.cc  camera.hh  color.cc  color.hh  image.cc  image.hh  light.cc  light.hh  main.cc  math_types.cc  math_types.hh  object.cc  object.hh  scene.cc  scene.hh  textures.cc  textures.hh  triangle_index.hh  types.cc  types.hh
